--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "Front_Door-v2",
     "description": "Pi doorbell and weather data display from HA",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-dashboard": "3.6.2"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flows.json",
